add swagger for email verification
